# rust-grpc-sample

./: .protolint.yaml  README.md
client/: .env  .gitignore  Cargo.toml  build.rs
client/src/: lib.rs  main.rs
proto/: service.proto
proto/fuga/: message.proto
proto/hoge/: message.proto
server/: .env  Cargo.toml  build.rs
server/src/: lib.rs  main.rs
