[package]
name = "sample-client"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"

serde = "1.0.130"
serde_derive = "1.0.130"

actix-web = { version = "^4.0.0-beta.11",  default-features = false, features = ["openssl"] }
actix-rt = {version = "2.3.0"}

tonic = {version="0.6", features=["tls-roots"]}
prost = "0.9"
tokio = {version = "1.0", features = ["time"]}

[build-dependencies]
tonic-build = "0.6"